k8s/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: college-erp
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - secretName: erp-tls
      hosts: [ "erp.example.com" ]
  rules:
    - host: erp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: college-erp
                port:
                  number: 80
